--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,26 @@ jobs:
           name: Print python version
           command: python -V
 
+      - run:
+          name: Download python dependencies
+          command: pip3 install -t dep -r requirements.txt
+
+      - run:
+          name: package the artifacts
+          command: cd dep; zip ../lambda_artifact.zip -r .
+
+      - run:
+          name: list directory
+          command: ls -ltr
+
+      - run:
+          name: package main program
+          command: zip lambda_artifact.zip -u main.py
+
+      - run:
+          name: list directory
+          command: ls -ltr
+
 workflows:
   test_my_app:
     jobs:
