--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,7 +32,7 @@ jobs:
       run: date
 
     - name: packaging lambda_artifacts
-      run: cd dep; zip ../lambda_artifact.zip -r .
+      run: cd dep; zip ../lambda_artifact.zip -rv .
 
     - name: show list
       run: ls -ltr
